Fixed portfolio margins on mobile

--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -21,12 +21,12 @@
 .prt-Portfolio_Item {
   width: 100%;
   margin-bottom: $grid-gap;
-  margin-right: calc($grid-gap / 2);
+  margin-right: $grid-gap / 2;
 
   @include Breakpoint('xs') {
     margin-right: $grid-gap;
   }
-  
+
   &:last-child {
     margin-bottom: 0;
     margin-right: 0;
